--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DuAn</string>
+    <string name="app_name">Sức khỏe24h</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -43,6 +43,14 @@
     <string name="gap">Thời gian báo</string>
     <string name="vol">Âm lượng</string>
     <string name="go">Đặt báo uống thuốc</string>
+    <string name="tuoi">Tuổi</string>
+    <string name="chieu">chiều cao</string>
+    <string name="cannang">Cân nặng</string>
+    <string name="ketqua">Kết quả BMI</string>
+    <string name="nam">Nam</string>
+    <string name="nu">Nữ</string>
+    <string name="gay"><![CDATA[< 18.5]]></string>
+    <string name="dangnhapcd">Đăng nhập cộng đồng</string>
     <string-array name="no_of_count">
         <item>1</item>
         <item>2</item>
@@ -52,21 +60,91 @@
         <item>6</item>
     </string-array>
     <string-array name="hours">
-        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
-        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item><item>11</item>
-        <item>12</item><item>13</item><item>14</item><item>15</item><item>16</item><item>17</item>
-        <item>18</item><item>19</item><item>20</item><item>21</item><item>22</item><item>23</item>
+        <item>00</item>
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
     </string-array>
     <string-array name="min">
-        <item>00</item><item>01</item><item>02</item><item>03</item><item>04</item><item>05</item>
-        <item>06</item><item>07</item><item>08</item><item>09</item><item>10</item><item>11</item>
-        <item>12</item><item>13</item><item>14</item><item>15</item><item>16</item><item>17</item>
-        <item>18</item><item>19</item><item>20</item><item>21</item><item>22</item><item>23</item>
-        <item>24</item><item>25</item><item>26</item><item>27</item><item>28</item><item>29</item>
-        <item>30</item><item>31</item><item>32</item><item>33</item><item>34</item><item>35</item>
-        <item>36</item><item>37</item><item>38</item><item>39</item><item>40</item><item>41</item>
-        <item>42</item><item>43</item><item>44</item><item>45</item><item>46</item><item>47</item>
-        <item>48</item><item>49</item><item>50</item><item>51</item><item>52</item><item>53</item>
-        <item>54</item><item>55</item><item>56</item><item>57</item><item>58</item><item>59</item>
+        <item>00</item>
+        <item>01</item>
+        <item>02</item>
+        <item>03</item>
+        <item>04</item>
+        <item>05</item>
+        <item>06</item>
+        <item>07</item>
+        <item>08</item>
+        <item>09</item>
+        <item>10</item>
+        <item>11</item>
+        <item>12</item>
+        <item>13</item>
+        <item>14</item>
+        <item>15</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>22</item>
+        <item>23</item>
+        <item>24</item>
+        <item>25</item>
+        <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+        <item>32</item>
+        <item>33</item>
+        <item>34</item>
+        <item>35</item>
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
+        <item>41</item>
+        <item>42</item>
+        <item>43</item>
+        <item>44</item>
+        <item>45</item>
+        <item>46</item>
+        <item>47</item>
+        <item>48</item>
+        <item>49</item>
+        <item>50</item>
+        <item>51</item>
+        <item>52</item>
+        <item>53</item>
+        <item>54</item>
+        <item>55</item>
+        <item>56</item>
+        <item>57</item>
+        <item>58</item>
+        <item>59</item>
     </string-array>
 </resources>
