--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="nu">Nữ</string>
     <string name="gay"><![CDATA[< 18.5]]></string>
     <string name="dangnhapcd">Đăng nhập cộng đồng</string>
+    <string name="dangkicd">Đăng kí</string>
     <string-array name="no_of_count">
         <item>1</item>
         <item>2</item>
