--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="vol">Âm lượng</string>
     <string name="go">Đặt báo uống thuốc</string>
     <string name="tuoi">Tuổi</string>
-    <string name="chieu">chiều cao</string>
+    <string name="chieu">Chiều cao</string>
     <string name="cannang">Cân nặng</string>
     <string name="ketqua">Kết quả BMI</string>
     <string name="nam">Nam</string>
